Media with Text Block #180 (#282)
* #180 - Add Media with text styles and bahaviour, fix video playback icon in resources gallery

* #180 - Add block selectors, unwrap specific divs

* #180 - Add Media with text block styles

* Refactor: new classes names for consistent content and developer experience, new reusable JS functions and code cleanup

* fix variant gallery gap

* fix aspect ratio for video

* fix subtext color with black bg

* refactor subtext color

* fix replace gap property

* refactor scroll behavior

* remove redundant code and update styles for better readibility

* refactor use variable for width

* fix center content for media-gallery variant

* revert icon css

* feat expanded wrapper for media-left and media-right variants

* fix content vertical position

* feat function to add class to child parent

* fix the container width of media-tabs to default width

* feat expanded container for media-tabs

* remove redundant icon css

* update media section with autoplay and video poster option

* fix exclude IFRAME from empty tags list

* update add iframe for youtube video

* fix play icon size

* fix pixel issue

* fix media-gallery cut-off

* fix global play icon jump issue

* Revert "fix global play icon jump issue"

This reverts commit b60fba0ee8569ba2cdf1c1678eccad1ab8497373.

* fix video play icon jump issue

* fix heading spacing

* fix center the content for full-width variant

* refactor css cleanup

* refactor css

* refactor remove unnecessary css

* fix media-with-tabs spacing and width

* fix media-with-tabs sub-title font

* fix next image peek for media-gallery variant

* feature mute/unmute controls for video

* fix position of play and mute button for media-with-text

* refactor media-gallery variant

* fix video size and button alignment

* fix image aspect ratio

* refactor alignment

* fix gallery image size on mobile

* Mute and pause btn m

--- a/blocks/v2-media-with-tabs/v2-media-with-tabs.css
+++ b/blocks/v2-media-with-tabs/v2-media-with-tabs.css
@@ -112,38 +112,28 @@ button.v2-media-with-tabs__tab:focus-visible {
   }
 
   .v2-media-with-tabs__header-section {
-    width: 50%;
+    max-width: 332px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .section.v2-media-with-tabs-container .v2-media-with-tabs-wrapper {
-    width: 100%;
-    margin: 0;
-  }
-
   .v2-media-with-tabs {
-    padding: 0 64px 0 32px;
     flex-direction: row;
     gap: 48px;
   }
 
   .v2-media-with-tabs__images-section {
     order: 1;
-    width: 70%;
+    width: 100%;
   }
 
   .v2-media-with-tabs__texts-section {
     order: 2;
-    width: 30%;
+    max-width: 309px;
     justify-content: center;
   }
 
   /* media-right variant: images displayed on the right side */
-  .v2-media-with-tabs.v2-media-with-tabs--media-right {
-    padding: 0 32px 0 64px;
-  }
-
   .v2-media-with-tabs--media-right .v2-media-with-tabs__images-section {
     order: 2;
   }
@@ -158,9 +148,11 @@ button.v2-media-with-tabs__tab:focus-visible {
     text-wrap: balance;
   }
 
-  .v2-media-with-tabs__subtitle {
+  .v2-media-with-tabs__texts-section .v2-media-with-tabs__subtitle {
     margin-bottom: 48px;
     font-size: var(--f-body-2-font-size);
+    letter-spacing: var(--f-body-2-letter-spacing);
+    line-height: var(--f-body-2-line-height);
   }
 
   .v2-media-with-tabs__image img {
@@ -181,6 +173,7 @@ button.v2-media-with-tabs__tab:focus-visible {
   .v2-media-with-tabs__header-section {
     order: 1;
     width: 100%;
+    max-width: unset;
   }
 
 }
