refactor cookie behaviour, modal window

--- a/blocks/v2-content-carousel/v2-content-carousel.css
+++ b/blocks/v2-content-carousel/v2-content-carousel.css
@@ -72,6 +72,8 @@
 
 .v2-content-carousel__figure {
   margin: 0;
+  background-color: var(--media-background);
+  border-radius: var(--border-radius);
 }
 
 .v2-content-carousel__figure img {
