--- a/blocks/v2-content-carousel/v2-content-carousel.css
+++ b/blocks/v2-content-carousel/v2-content-carousel.css
@@ -72,6 +72,9 @@
 
 .v2-content-carousel__figure {
   margin: 0;
+}
+
+.v2-content-carousel__figure picture {
   background-color: var(--media-background);
   border-radius: var(--border-radius);
 }
