--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1137,7 +1137,7 @@ main.blue-contract .section.section-with-title p {
 }
 
 .redesign-v2 .section:first-child,
-.section:not(.section--black-background, .section--gray-background)
+.redesign-v2 .section:not(.section--black-background, .section--gray-background)
   + .section:not(.section--black-background, .section--gray-background) {
   padding-top: 0;
 }
@@ -1148,9 +1148,30 @@ main.blue-contract .section.section-with-title p {
   margin: auto;
 }
 
+/* stylelint-disable-next-line no-descending-specificity */
+.redesign-v2 .modal-content {
+  --section-padding: 0;
+  --section-div-padding-horizontal: 16px;
+  --section-div-padding-vertical: 64px;
+  --section-div-padding: 0 var(--section-div-padding-horizontal) var(--section-div-padding-vertical);
+}
+
 .redesign-v2 .section div.full-width {
   padding: 0;
   width: 100%;
+}
+
+.redesign-v2 .modal-content .section div.full-width {
+  margin: -24px 0;
+}
+
+/* stylelint-disable-next-line no-descending-specificity */
+.redesign-v2 .modal-content .section--black-background,
+.redesign-v2 .modal-content .section--gray-background,
+.redesign-v2 .modal-content .section--black-background + .section:not(.section--black-background, .section--gray-background),
+.redesign-v2 .modal-content .section--gray-background + .section:not(.section--black-background, .section--gray-background),
+.redesign-v2 .modal-content .section div.full-width + div {
+  padding-top: var(--section-div-padding-vertical);
 }
 
 :root.redesign-v2 .section .expanded-width {
@@ -1159,7 +1180,7 @@ main.blue-contract .section.section-with-title p {
 }
 
 /* Section Background colors */
-.section--black-background {
+.redesign-v2 .section--black-background {
   --media-background: var(--c-grey-900);
   --text-color: var(--c-white);
   --card-background: var(--c-grey-900);
@@ -1173,7 +1194,7 @@ main.blue-contract .section.section-with-title p {
   padding-top: 80px;
 }
 
-.section--gray-background {
+.redesign-v2 .section--gray-background {
   --text-color: var(--c-main-black);
   --card-background: var(--c-white);
   --card-text: var(--c-main-black);
@@ -1627,6 +1648,14 @@ main.blue-contract .section.section-with-title p {
   height: 32px;
 }
 
+.v2-inpage-navigation {
+  opacity: 0;
+}
+
+.v2-inpage-navigation[data-block-status="loaded"] {
+  opacity: 1;
+}
+
 @media (max-width: 744px) {
   .v2-content-card__item .v2-video__playback-button,
   .v2-content-card__item .v2-video__mute-controls{
@@ -1639,6 +1668,16 @@ main.blue-contract .section.section-with-title p {
     --section-padding: 40px 0 56px;
     --section-div-padding: 24px 32px;
     --text-block-max-width: 506px;
+  }
+
+  .redesign-v2 .modal-content {
+    --section-padding: 0;
+    --section-div-padding-horizontal: 32px;
+    --section-div-padding-vertical: 80px;
+  }
+
+  .redesign-v2 .modal-content .section div.full-width {
+    margin: -40px 0 -16px;
   }
 
   .v2-video__playback-button,
@@ -1664,6 +1703,16 @@ main.blue-contract .section.section-with-title p {
     --section-padding: 56px 0 136px;
     --section-div-padding: 24px 0;
     --text-block-max-width: 694px;
+  }
+
+  .redesign-v2 .modal-content {
+    --section-padding: 0;
+    --section-div-padding-horizontal: 0;
+    --section-div-padding-vertical: 128px;
+  }
+
+  .redesign-v2 .modal-content .section div.full-width {
+    margin: -80px 0 -48px;
   }
 
   :root.redesign-v2 .section .expanded-width {
