--- a/common/modal/modal.css
+++ b/common/modal/modal.css
@@ -254,6 +254,12 @@
 }
 
 .modal--reveal .section > div {
-  padding-top: 0;
+  padding-top: 32px;
   padding-bottom: 0;
+}
+
+@media (min-width: 1200px) {
+  .modal--reveal .section > div {
+    padding-top: 48px;
+  }
 }
