--- a/common/modal/modal.css
+++ b/common/modal/modal.css
@@ -36,6 +36,7 @@
   opacity: 0;
 }
 
+.redesign-v2 .modal-content.modal-content-fade-in,
 .modal-content.modal-content-fade-in {
   transform: translateY(0);
 }
@@ -47,6 +48,11 @@
   position: relative;
   transform: translateY(-100vh);
   transition: transform 0.3s ease-out;
+}
+
+.redesign-v2 .modal-content {
+  transform: translateY(100vh);
+  transition: transform var(--duration-large) var(--easing-entrance);
 }
 
 :root:not(.redesign-v2) .modal-content {
@@ -123,6 +129,10 @@
   display: flex;
   justify-content: center;
   background: var(--background-color);
+}
+
+.redesign-v2 .modal-before-banner {
+  margin-top: -48px;
 }
 
 .modal-before-banner button.modal-close-button {
@@ -209,7 +219,8 @@
 }
 
 .redesign-v2 .modal-content:has(.modal-video) {
-  padding: 32px 16px 0;
+  margin-top: 32px;
+  padding: 0 16px;
   max-width: calc(var(--wrapper-width) + 32px);
 }
 
@@ -221,7 +232,8 @@
 
 @media (min-width: 744px) {
   .redesign-v2 .modal-content:has(.modal-video) {
-    padding: 48px 32px 0;
+    margin-top: 48px;
+    padding: 0 32px;
   }
 
   .redesign-v2 .modal-video {
@@ -231,8 +243,9 @@
 
 @media (min-width: 1200px) {
   .redesign-v2 .modal-content:has(.modal-video) {
-    padding: 48px 0 0;
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0;
     max-width: var(--wrapper-width);
   }
 
@@ -241,6 +254,7 @@
   }
 }
 
+.redesign-v2 .modal--video,
 .modal--reveal {
   display: flex;
   flex-direction: column;
@@ -253,12 +267,14 @@
   aspect-ratio: auto;
 }
 
+.redesign-v2 .modal--video .section > div,
 .modal--reveal .section > div {
   padding-top: 32px;
   padding-bottom: 0;
 }
 
 @media (min-width: 1200px) {
+  .redesign-v2 .modal--video .section > div,
   .modal--reveal .section > div {
     padding-top: 48px;
   }
